fix: - 409 response when trying to delete event associated with some routes
doc:
- add 409 to DELETE /event/{id}
- add 409 to DELETE /place/{id} when trying to delete place associated with some events
